# takopi-telegram-group-auth

./: .gitignore  LICENSE  pyproject.toml  readme.md
src/takopi_telegram_group_auth/: __init__.py  backend.py
