[project]
name = "takopi-telegram-group-auth"
authors = [{name = "z80"}]
version = "0.1.5"
description = "Telegram transport plugin for Takopi that restricts group chats to admins."
readme = "readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
  "takopi>=0.15,<0.16",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/z80dev/takopi-telegram-group-auth"
Repository = "https://github.com/z80dev/takopi-telegram-group-auth"
Issues = "https://github.com/z80dev/takopi-telegram-group-auth/issues"

[project.entry-points."takopi.transport_backends"]
telegram_group_auth = "takopi_telegram_group_auth:BACKEND"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
addopts = ["--cov=takopi_telegram_group_auth", "--cov-report=term-missing"]
testpaths = ["tests"]
